[metadata]
name = volconver
author = Adriano Fernando Sturaro
version = 0.0.0
author_email = adrianosturaro@yahoo.com.br
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
description = Conversão de volume de liquidos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adrianosturaro/volconver.git
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    pydantic
    numpy

[options.packages.find]
where = src
exclude =
    tests*
    
    
[options.package_data]
build =
    py.typed
* = *.ini

[options.extras_require]
dev = 
    pytest==7.1.2
    flake8==4.0.1
    mypy==0.960
    black==22.3.0

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
strict = true

